# git_function_history

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  check_downloads.py  check_downloads_broken.py  check_downloads_old.py  check_loc.py  downloads.json  downloods.json  index.html  languages.json  loc.json  structure.txt
.github/: dependabot.yml
.github/workflows/: cargo_clippy.yml  cargo_clippy_lib.yml  cargo_fmt.yml  chanelog.yaml  gh_pages_doc.yml  msrv.yml  release.yaml  release_all.yaml  release_cli.yaml  release_gui.yaml  release_lib.yaml  update_stats.yml
backend_thread/: Cargo.toml
backend_thread/src/: lib.rs  types.rs
cargo-function-history/: Cargo.toml  README.md
cargo-function-history/src/: keys.rs  lib.rs  main.rs  types.rs
cargo-function-history/src/app/: actions.rs  mod.rs  state.rs  ui.rs
cargo-function-history/src/inputs/: events.rs  key.rs  mod.rs
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
doc/cargo_function_history/: all.html  fn.start_ui.html  index.html  sidebar-items.js
doc/cargo_function_history/app/: enum.AppReturn.html  index.html  sidebar-items.js  struct.App.html
doc/cargo_function_history/keys/: enum.Key.html  index.html  sidebar-items.js
doc/enum_stuff/: all.html  derive.enumstuff.html  index.html  sidebar-items.js
doc/function_grep/: all.html  enum.Error.html  enum.SupportedLanguages.html  fn.get_file_type_from_file.html  fn.get_file_type_from_file_ext.html  index.html  macro.construct_language!.html  macro.construct_language.html  sidebar-items.js  struct.ParsedFile.html
doc/function_grep/filter/: enum.AttributeType.html  enum.SingleOrMany.html  fn.builtin_filters.html  fn.builtin_filters_by_info.html  index.html  sidebar-items.js  struct.All.html  struct.Attribute.html  struct.FilterInformation.html  struct.Filters.html  struct.InstantiatedFilter.html  struct.Language.html  struct.Many.html  trait.Filter.html  trait.HasFilterInformation.html  trait.Info.html  type.Attributes.html  type.FilterType.html  type.InstantiatedFilterType.html
doc/function_grep/supported_languages/: enum.InstantiationError.html  fn.predefined_languages.html  index.html  sidebar-items.js  struct.C.html  struct.CSharp.html  struct.Go.html  struct.Identifier.html  struct.InstantiatedLanguage.html  struct.InstatiatedLanguage.html  struct.Java.html  struct.JavaScript.html  struct.LanguageInformation.html  struct.OCaml.html  struct.Python.html  struct.Ruby.html  struct.Rust.html  struct.Tags.html  struct.TreeSitter.html  trait.Assoc.html  trait.HasLanguageInformation.html  trait.IdentifierQuery.html  trait.InstantiateMap.html  trait.InstatiateMap.html  trait.SupportedLanguage.html  trait.TreeSitterQuery.html  trait.TreeSitterTags.html
doc/function_history_backend_thread/: all.html  fn.command_thread.html  index.html  sidebar-items.js
doc/function_history_backend_thread/types/: enum.Command.html  enum.CommandResult.html  enum.FullCommand.html  enum.HistoryFilterType.html  enum.ListType.html  enum.Status.html  index.html  sidebar-items.js  struct.FilterType.html  struct.SearchType.html
doc/git_function_history/: all.html  enum.FileFilterType.html  enum.Filter.html  fn.get_function_history.html  fn.get_git_info.html  index.html  macro.filter_by!.html  macro.filter_by.html  macro.get_function_history!.html  macro.get_function_history.html  macro.impl_function_trait!.html  macro.impl_function_trait.html  sidebar-items.js  struct.CommitInfo.html  struct.MacroOpts.html
doc/git_function_history/languages/: enum.Language.html  enum.LanguageFilter.html  index.html  sidebar-items.js  struct.GoFile.html  struct.PythonFile.html  struct.RubyFile.html  struct.RustFile.html  struct.UMPLFile.html  trait.FileTrait.html  trait.FunctionTrait.html
doc/git_function_history/types/: enum.Directions.html  (+6 more)
doc/git_function_history_gui/: all.html  index.html  sidebar-items.js  struct.MyEguiApp.html
doc/git_function_history_proc_macro/: all.html  derive.enumstuff.html  index.html
doc/search.index/: 03cc8593fac5.js  05a4b1e3b112.js  060d470d57a7.js  0f0819e0b140.js  158067d2f66c.js  19b0b2e2b518.js  1bbe260cea8b.js  1deaa6ce92ae.js  2454701cfd79.js  25c47ff0fd5b.js  284e251c7d06.js  2aff4f699bab.js  319bc87cabfe.js  34bb5e9c3082.js  39c280680220.js  3a17f7d09496.js  3a5892dd56fd.js  3a80f3b24be2.js  3e1b3a2be5e9.js  4080e57e0820.js  466ea0b7e60f.js  4abf09cec5b5.js  51565414dbfd.js  51b354fdd88d.js  53278e28d4bf.js  56c07cd5d3e2.js  5785c15513f4.js  58bf15b7cc87.js  5aca86841970.js  6039ba3b74e3.js  6344add0b9cc.js  64579b63f6b2.js  6510d98c1160.js  66bdf5114693.js  67199673a6f4.js  673fb30c9a80.js  67861b23c493.js  6983156f3e5f.js  70158bf8dc0c.js  7367fa9e51e0.js  (+8 more)
enum_stuff/: Cargo.toml
enum_stuff/src/: lib.rs
fixtures/: CHANGELOG.md
function-grep/: Cargo.toml  README.md  test.c  test.ml  test.py  test.rs
function-grep/examples/: main.rs
function-grep/src/: filter.rs  lib.rs  main.rs  supported_languages.rs
function-grep/src/filter/: filter_parsers.rs  general_filters.rs
function-grep/src/supported_languages/: c.rs  rust.rs
function-grep/tests/: test.java  test.js  test.rs
function_history_backend_thread/: Cargo.toml  README.md
function_history_backend_thread/src/: lib.rs  types.rs
git-function-history-gui/: Cargo.toml  README.md
git-function-history-gui/src/: lib.rs  main.rs  types.rs
git-function-history-lib/: Cargo.toml  README.md
git-function-history-lib/src/: lib.rs  new_types.rs  test_functions.c  test_functions.go  test_functions.py  test_functions.rb  test_functions.rs  test_functions.umpl  things.rs  types.rs
git-function-history-lib/src/languages/: c.rs  go.rs  java.rs  mod.rs  python.rs  ruby.rs  rust.rs  umpl.rs
git_function_history-proc-macro/: Cargo.toml  README.md
git_function_history-proc-macro/src/: lib.rs
git_function_history_proc-macro/: Cargo.toml  README.md
git_function_history_proc-macro/src/: lib.rs
src/: cuurently_failing_test.rs  lib.rs  test_functions.rs  things.rs
stats/: check_downloads.py  check_loc.py  downloads.json  loc.json
(+124 files in other folders)
