[package]
name = "git_function_history"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/git_function_history"
keywords = ["git function history", "git", "function", ]
categories = ["tools", "git"]
description = "show function history from git"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
