[package]
name = "cargo-function-history"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/git_function_history/tree/main/cargo-function-history"
keywords = ["git_function_history", "git", "function", ]
categories = ["tools", "git", "tui"]
description = "cargo frontend for git-function-history"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]
parallel = ["git_function_history/parallel", "function_history_backend_thread/parallel"]
# c_lang = ["function_history_backend_thread/c_lang", "git_function_history/c_lang"]

[dependencies]
git_function_history = { path = "../git-function-history-lib", version = "0.7.0", default-features = false}
ratatui = { version = "0.22.0", features = ["crossterm"], default-features = false }
crossterm = "0.27.0"
eyre = "0.6.8"
dirs = "5.0.1"
simple_file_logger = "0.3.1"
log = "0.4.20"
function_history_backend_thread = { path = "../function_history_backend_thread", version = "0.3.0", default-features = false}
tui-input = "0.8.0"
