[package]
name = "cargo-function-history"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/git_function_history/tree/main/cargo-function-history"
keywords = ["git_function_history", "git", "function", ]
categories = ["tools", "git", "tui"]
description = "cargo frontend for git-function-history"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]
parallel = ["git_function_history/parallel", "function_history_backend_thread/parallel"]

[dependencies]
git_function_history = { path = "../git-function-history-lib", version = "0.7.1", default-features = false}
ratatui = { version = "0.29.0", features = ["crossterm"], default-features = false }
crossterm = "0.28.1"
eyre = "0.6.12"
dirs = "5.0.1"
simple_file_logger = "0.4.1"
log = "0.4.22"
function_history_backend_thread = { path = "../function_history_backend_thread", version = "0.3.1", default-features = false}
tui-textarea = "0.7.0"
function-grep = { path = "../function-grep", version = "0.1.1", default-features = false}
