[package]
name = "enum_stuff"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/git_function_history/tree/main/enum_stuff"
keywords = ["enmum", "proc-macro"]
categories = ["proc-macro"]
description = "A proc macro to generate a bunch of stuff for enums - for git_function_history"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.3", features = ["full", "fold"] }
quote = "1.0.23"
proc-macro2 = "1.0.51"
[lib]
proc-macro = true