[package]
name = "function-grep"
version = "0.1.0"
repository = "https://github.com/mendelsshop/git_function_history/tree/main/function-grep"
keywords = ["tree-sitter", "function"]
categories = ["tools"]
description = "find functions in files, powered by tree sitter"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rust", "python", "c", "ocaml", "java"]
rust = ["dep:tree-sitter-rust"]
ocaml = ["dep:tree-sitter-ocaml"]
c = ["dep:tree-sitter-c"]
java = ["dep:tree-sitter-java"]
python = ["dep:tree-sitter-python"]

[dependencies]
tree-sitter = "0.20.10"
tree-sitter-c = { version = "0.20.8", optional = true }
tree-sitter-java = { version = "0.20.2", optional = true }
tree-sitter-ocaml = { version = "0.20.4", optional = true }
tree-sitter-python = { version = "0.20.4", optional = true }
tree-sitter-rust = { version = "0.20.4", optional = true }

[dev-dependencies]
clap = { version = "4.5.2", features = ["derive"] }

[[example]]
name = "main"
