[package]
name = "function-grep"
version = "0.1.1"
license = "MIT"
repository = "https://github.com/mendelsshop/git_function_history/tree/main/function-grep"
keywords = ["tree-sitter", "function"]
categories = ["tools"]
description = "find functions in files, powered by tree sitter"
edition = "2021"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rust", "python", "c", "ocaml", "java", "ruby", "go", "c-sharp"]
rust = ["dep:tree-sitter-rust"]
ocaml = ["dep:tree-sitter-ocaml"]
c = ["dep:tree-sitter-c"]
java = ["dep:tree-sitter-java"]
python = ["dep:tree-sitter-python"]
ruby = ["dep:tree-sitter-ruby"]
go = ["dep:tree-sitter-go"]
c-sharp = ["dep:tree-sitter-c-sharp"]

[dependencies]
tree-sitter = ">=0.21.0"
tree-sitter-c = { version = "0.21.4", optional = true }
tree-sitter-java = { version = "0.23.2", optional = true }
tree-sitter-ocaml = { version = "0.21.2", optional = true }
tree-sitter-python = { version = "0.21.0", optional = true }
tree-sitter-ruby = { version = "0.21.0", optional = true }
tree-sitter-go = { version = "0.21.2", optional = true }
tree-sitter-c-sharp = { version = "0.21.3", optional = true }
tree-sitter-rust = { version = "0.21.2", optional = true }
tree-sitter-tags = "0.21"

[dev-dependencies]
clap = { version = "4.5.7", features = ["derive"] }

[[example]]
name = "function-grep"
path = "examples/main.rs"
