[package]
name = "function_history_backend_thread"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/git_function_history/tree/main/function_history_backend_thread"
keywords = ["threading", "custom_types"]
categories = ["threading", "custom_types"]
description = "threading and types for git-function-history"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["parallel"]
parallel = ["git_function_history/parallel"]
# c_lang = ["git_function_history/c_lang"]

[dependencies]
git_function_history = { path = "../git-function-history-lib", version = "0.7.1", default-features = false}
log = "0.4.20"
