[package]
name = "git-function-history-gui"
version = "0.4.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/git_function_history/tree/main/git-function-history-gui"
keywords = ["git_function_history", "git", "function", ]
categories = ["tools", "git", "gui" ]
description = "GUI frontend for git-function-history"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]
parallel = ["git_function_history/parallel", "function_history_backend_thread/parallel"]
not-parallel = []
c_lang = ["git_function_history/c_lang", "function_history_backend_thread/c_lang"]
unstable = ["git_function_history/unstable", "function_history_backend_thread/unstable"]

[dependencies]
eframe = {version = "0.19.0", features = ["dark-light"]}
git_function_history = { path = "../git-function-history-lib", version = "0.6.2", default-features = false}
function_history_backend_thread = { path = "../function_history_backend_thread", version = "0.2.2", default-features = false}
simple_file_logger = "0.2.0"
log = "0.4.17"
image = "0.24.4"