[package]
name = "git-function-history-gui"
version = "0.4.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/git_function_history/tree/main/git-function-history-gui"
keywords = ["git_function_history", "git", "function", ]
categories = ["tools", "git", "gui" ]
description = "GUI frontend for git-function-history"
rust-version = "1.81.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["parallel"]
parallel = ["git_function_history/parallel", "function_history_backend_thread/parallel"]

[dependencies]
eframe = {version = "0.29.1"}
egui_extras = { version = "*", features = ["all_loaders"] }
git_function_history = { path = "../git-function-history-lib", version = "0.7.1", default-features = false}
function_history_backend_thread = { path = "../function_history_backend_thread", version = "0.3.1", default-features = false}
simple_file_logger = "0.4.1"
log = "0.4.22"
image = "0.25.2"
function-grep = { version = "0.1.1", path = "../function-grep" }
itertools = "0.14.0"
