[package]
name = "git_function_history"
version = "0.7.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/git_function_history/tree/main/git-function-history-lib"
keywords = ["git_function_history", "git", "function", ]
categories = ["tools", "git"]
description = "show function history from git"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["parallel", "cache"]
parallel = ["dep:rayon", "gix-features/parallel", "gix-features/fs-walkdir-parallel"]
# c_lang = []
# unstable = ["dep:gosyn", "dep:javaparser"]
cache = ["dep:cached"]

[dependencies]
chrono = "0.4.28"
ra_ap_syntax = "0.0.173"
rayon = { version = "1.7.0", optional = true }
rustpython-parser = { features = ["lalrpop"], version = "0.3.0" }
lib-ruby-parser = "4.0.4"
gosyn = "0.2.4"
# can't be published b/c git dependency
# javaparser = {git = "https://github.com/tanin47/javaparser.rs", optional = true}
cfg-if = "1.0.0"
cached = {version = "0.44.0", optional = true}
# git-index-performanc
gix = { version = "0.52.0", default-features = false, features = ["max-performance-safe"] }
gix-features = { version = "0.33.0", features = ["zlib", "once_cell" ,"walkdir"] }
umpl = "1.1.1"
enum_stuff = {path = "../enum_stuff"}
