[package]
name = "git_function_history"
version = "0.7.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/git_function_history/tree/main/git-function-history-lib"
keywords = ["git_function_history", "git", "function"]
categories = ["tools", "git"]
description = "show function history from git"
rust-version = "1.76.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["parallel", "cache"]
parallel = [
    "dep:rayon",
    "gix-features/parallel",
    "gix-features/fs-walkdir-parallel",
]
cache = ["dep:cached"]

[dependencies]
chrono = "0.4.38"
rayon = { version = "1.10.0", optional = true }
cfg-if = "1.0.0"
cached = { version = "0.54.0", optional = true }
gix = { version = "0.70.0", default-features = false, features = [
    "max-performance-safe",
    "revision",
] }
gix-features = { version = "0.39.0", features = [
    "zlib",
    "once_cell",
    "walkdir",
] }
git_function_history-proc-macro = { version = "0.1.0", path = "../git_function_history-proc-macro" }
log = "0.4.22"
function-grep = { version = "0.1.0", path = "../function-grep" }
