[package]
name = "git_function_history-proc-macro"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/git_function_history/tree/main/enum_stuff"
keywords = ["enum", "proc-macro"]
categories = ["proc-macro"]
description = "A proc macro to generate a bunch of stuff for enums - for git_function_history"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.48", features = ["full", "fold", "extra-traits"] }
quote = "1.0.35"
proc-macro2 = "1.0.76"
[lib]
proc-macro = true
